fix: fixed bar chart having extra padding; fixed trend badge using wrong colors for negative values (#11336)

--- a/packages/reporting/src/components/TrendBadge/TrendBadge.less
+++ b/packages/reporting/src/components/TrendBadge/TrendBadge.less
@@ -26,7 +26,7 @@
     }
 
     .color-negative {
-        color: var(--static-error);
+        color: var(--content-error-default);
     }
 
     .size-sm {
